# study-opencascade

./: .gitignore  README.md
makeBox/: CMakeLists.txt  main.cpp
note/BASE/: Interface_Static
note/STEP/: STEPControl_Package  STEP_vs_STEPCAF  StepModelType
note/StepControl/: note_step  note_test
readStep/: CMakeLists.txt  main.cpp
readStep/lib/: readStep.cpp
readStep/testFile/: basic.step  curve.step  hole.step
stepToOcct/: CMakeLists.txt  main.cpp
testFile/: color.txt  hole.step
